--- a/public/offline.html
+++ b/public/offline.html
@@ -290,7 +290,7 @@
       <div class="quick-links">
         <h3>Acesso Rápido (Offline)</h3>
         <div class="links-grid">
-          <a href="/bois" class="quick-link">
+          <a href="/animals" class="quick-link">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
